Compression problems: webp

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <body onload="drawImages()">
 <div>
   <a href="jpeg_test.html">JPEG Images</a><br>
+  <a href="webp_test.html">WebP Images</a><br>
   <a href="border_image.html">border-image problems</a><br>
   <a href="gpu_test.html">GPU-related problems</a><br>
   <a href="background-fixed-scroll-layer.html">scrolling backround layer problems</a><br>
